--- a/src/main/copy/test.html
+++ b/src/main/copy/test.html
@@ -11,20 +11,22 @@
 <thead>
 <tr><td rowspan="1" colspan="3">test</td></tr>
 </thead><tbody>
+<!--@pageobject(name='GooglePO')-->
+<!--@function(name='login')-->
 <tr>
 	<td>open</td>
-	<td>/search?client=ubuntu&amp;channel=fs&amp;q=google&amp;ie=utf-8&amp;oe=utf-8</td>
+	<td></td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Google</td>
-	<td></td>
+	<td>store</td>
+	<td>dhanuka</td>
+	<td>nameParam</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=lst-ib</td>
-	<td>dhanuka</td>
+	<td>${nameParam}</td>
 </tr>
 <tr>
 	<td>click</td>
