basic flow of PageObject model

--- a/src/main/copy/test.html
+++ b/src/main/copy/test.html
@@ -11,18 +11,18 @@
 <thead>
 <tr><td rowspan="1" colspan="3">test</td></tr>
 </thead><tbody>
-<!--@pageobject(name='GooglePO')-->
-<!--@function(name='login')-->
 <tr>
 	<td>open</td>
 	<td></td>
 	<td></td>
 </tr>
+<!--@pageobject(name='GooglePO1',replace=true)-->
 <tr>
 	<td>store</td>
-	<td>1</td>
+	<td>dhanuka</td>
 	<td>nameParam</td>
 </tr>
+<!--@function(name='login1',replace=true)-->
 <tr>
 	<td>type</td>
 	<td>id=lst-ib</td>
@@ -33,6 +33,8 @@
 	<td>name=btnG</td>
 	<td></td>
 </tr>
+<!--@endFunction-->
+<!--@endPage-->
 </tbody></table>
 </body>
 </html>
