--- a/src/main/copy/test.html
+++ b/src/main/copy/test.html
@@ -11,18 +11,18 @@
 <thead>
 <tr><td rowspan="1" colspan="3">test</td></tr>
 </thead><tbody>
+<!--@pageobject(name='GooglePO1')-->
 <tr>
 	<td>open</td>
 	<td></td>
 	<td></td>
 </tr>
-<!--@pageobject(name='GooglePO1',replace=true)-->
+<!--@function(name='login1')-->
 <tr>
 	<td>store</td>
 	<td>dhanuka</td>
 	<td>nameParam</td>
 </tr>
-<!--@function(name='login1',replace=true)-->
 <tr>
 	<td>type</td>
 	<td>id=lst-ib</td>
@@ -34,6 +34,13 @@
 	<td></td>
 </tr>
 <!--@endFunction-->
+<!--@function(name='loginM',manualClass='GooglePOManual')-->
+<tr>
+	<td>store</td>
+	<td>dhanuka</td>
+	<td>manualParam</td>
+</tr>
+<!--@endFunction(name='loginM')-->
 <!--@endPage-->
 </tbody></table>
 </body>
